--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,7 @@
 # Use of this source code is governed by a BSD-style license
 # that can be found in the LICENSE file.
 
-application: zionsoft-bible
+application: z-bible
 version: 1
 runtime: go
 api_version: go1
